--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     <div style="min-width: 320px; width: 100%; margin: 0 auto;">
                         <!-- Maintain aspect ratio of video player -->
                         <div class="player-container">
-                            <iframe src="https://www.youtube.com/embed/XGSy3_Czz8k" frameborder="0" scrolling="no" style="position: absolute; top: 0; right: 0; bottom: 0; left: 0; width: 100%; height: 100%; border: none;" id="videoPlayerIframe" allowfullscreen="" class="no-focus"></iframe>
+                            {{VIDEO_IFRAME}}
                             <div id="resumeSplash" class="resume-splash" style="display: block;">
                                 <img src="dist/images/wllp_video_play_btn.png" alt="resume video playback">
                             </div>
