--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 <!-- <meta name="twitter:site" content="@username">-->
 
 <link href="dist/css/style.css" rel="stylesheet">
+<link href="dist/css/presentation.css"" rel="stylesheet">       
 <!--[if lt IE 8]>
 <link href="dist/css/bootstrap-ie7.css" rel="stylesheet">
 <![endif]-->
@@ -56,7 +57,9 @@
 <link rel="shortcut icon" type="image/png" href="dist/images/favicons/favicon-152.png" sizes="152x152">
 <link rel="shortcut icon" type="image/png" href="dist/images/favicons/favicon-195.png" sizes="195x195">
 <link rel="shortcut icon" type="image/png" href="dist/images/favicons/favicon-228.png" sizes="228x228">
-
+<script async="" src="https://www.google-analytics.com/analytics.js"></script>
+<script async="" src="dist/js/settings.js"></script>
+<script async="" src="dist/js/landing-page.js"></script>
 <!-- IE Mobile (Windows Phone) fix -->
 <script>
     (function () {
