--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
 <script async="" src="https://www.google-analytics.com/analytics.js"></script>
 <script async="" src="dist/js/settings.js"></script>
 <script async="" src="dist/js/landing-page.js"></script>
+<script async="" src="dist/language/en.js"></script>                                            
+
 <!-- IE Mobile (Windows Phone) fix -->
 <script>
     (function () {
