--- a/index.html
+++ b/index.html
@@ -329,53 +329,9 @@
     <div id="jsTimelineIndicator" class="timeline-indicator"></div>
 </div>
 
-<div id="jsTimelineContainer" class="col-xs-12 timeline-chapter-buttons nopad">
-
-    <div id="jsNormalTimeline">
-        <div class="chapter-button chapter-button__introduction">
-            <div class="timeline-state" data-percent-width="3.6" data-percent-start="0" data-state="introduction"></div>
-            <div class="timeline-state" data-percent-width="10.1" data-percent-start="3.6" data-state="introduction-pt2"></div>
-            <div class="timeline-state" data-percent-width="2.3" data-percent-start="13.7" data-state="introduction-pt3"></div>
-            <span class="translate" data-translate="ChapterIntroduction">Introduction</span>
-        </div>
-
-        <div class="chapter-button chapter-button__overview">
-            <div class="timeline-state" data-percent-width="16" data-percent-start="16" data-state="overview"></div>
-            <span class="translate" data-translate="ChapterOverview">Overview</span>
-        </div>
-
-        <div class="chapter-button chapter-button__business-challenges">
-            <div class="business-challenges-pt1"></div>
-            <div class="timeline-state state-tl-business-challenges-pt2" data-percent-width="18.2" data-percent-start="32" data-state="business-challenges-pt2"></div>
-            <div class="business-challenges-pt3">
-                <div class="timeline-state state-tl-business-challenges-pt3" data-percent-width="3.8" data-percent-start="50.2" data-state="business-challenges-pt3"></div>
-            </div>
-            <span class="translate" data-translate="ChapterBusinessChallenges">Business challenges</span>
-        </div>
-
-        <div class="chapter-button chapter-button__learn-more">
-            <div class="timeline-state" data-percent-width="2.5" data-percent-start="54" data-state="learn-more"></div>
-            <div class="timeline-state" data-percent-width="13" data-percent-start="56.5" data-state="learn-more-pt2"></div>
-            <div class="timeline-state" data-percent-width="2.5" data-percent-start="69.5" data-state="learn-more-pt3"></div>
-            <span class="translate" data-translate="ChapterLearnMore">Learn more</span>
-        </div>
-
-        <div class="chapter-button chapter-button__questions">
-            <div class="timeline-state" data-percent-width="11.9" data-percent-start="72" data-state="questions"></div>
-            <div class="timeline-state" data-percent-width="3.1" data-percent-start="83.9" data-state="questions-pt2"></div>
-            <span class="translate" data-translate="ChapterQuestions">Questions</span>
-        </div>
-
-        <div class="chapter-button chapter-button__thanks">
-            <div class="timeline-state" data-percent-width="13" data-percent-start="87" data-state="thanks"></div>
-            <span class="translate" data-translate="ChapterThanks">Thanks</span>
-        </div>
-
-    </div>
-
-</div>
-    </div>
-
+       <div id="jsTimelineContainer" class="timeline-chapters"></div>
+                </div> 
+        
     <div class="col-xs-2 nopad">
         <div class="col-xs-4 nopad" id="jsSettingsTimelineItem">
 
